# OpenGL-Flight-Simulator

./: .gitignore  ADR.md  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  REFACTOR.md  TODO.md  build.sh  run_gdb.py
flight_sim/map/: map.mtl
flight_sim/shaders/common/: atmosphere_settings.fs  basic.fs  casting.fs
flight_sim/shaders/compute/: atmosphere.comp  atmosphere_exp.comp  atomosphere.comp  clear_solid.comp  cloudNoise.comp  debug_circular.comp  debug_uniform_vel.comp  lbm_collision.comp  lbm_force.comp  lbm_reinit.comp  lbm_stream.comp  particle_advect.comp  shift_grid.comp  stability_check.comp  textgen.glsl  velocity_reconstruct.comp  vortex_physics.comp  voxelize.comp  voxelize_cylinder.comp  voxelize_ground.comp  wake_extract.comp  wake_inject.comp
flight_sim/shaders/frag/: atmosphere.fs  cloudworks copy.fs  cloudworks.fs  lighting.fs  particle.fs  slice.fs
flight_sim/shaders/vertex/: cloudworks.vs  lighting.vs  particle.vs  slice.vs
includes/: FlowField.h  FluidSolver.h  GPUFluidSolver.h  Joints.h  ObjModel.h  PhysicalModel.h  Plane.h  Shader.h  TextureGenerator.h  WakeSystem.h  baseHeader.h
includes/gl/shared/: gltools.h
physics_engine/: CMakeLists.txt
physics_engine/includes/: SimpleEngine.h
physics_engine/includes/interfaces/: SimpleEngine_Interface.h
physics_engine/src/: SimpleEngine.cpp
render_engine/: CMakeLists.txt
render_engine/includes/: RenderEngine.h
render_engine/includes/interfaces/: RenderEngine_Interface.h
render_engine/src/: RenderEngine.cpp
src/: AircraftTest.cpp  FlightStabilityTest.cpp  FluidSolver.cpp  GPUFluidSolver.cpp  Joints.cpp  LBMTest.cpp  Main.cpp  ObjModel.cpp  ParticleTest.cpp  PhysicalModel.cpp  Plane.cpp  Shader.cpp  gltools.cpp  math3D.cpp
src/texture/generator/: TextureGenerator.cpp
utils/: CMakeLists.txt
utils/logger/includes/: logger.h
utils/path_mgr/: CMakeLists.txt
utils/path_mgr/includes/: path_mgr.h
utils/path_mgr/src/: path_mgr.cpp
