cmake_minimum_required(VERSION 3.0.2)
project(physics_engine)

# add source files
file(GLOB_RECURSE LIB_SOURCE_FILES ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/src/*.cpp)

add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${LIB_SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/${PROJECT_NAME}>
    $<INSTALL_INTERFACE:include>
)
set_target_properties(${PROJECT_NAME} PROPERTIES 
	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_FOLDER}/lib"
	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_FOLDER}/lib"
	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/${OUTPUT_FOLDER}/")